--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/><meta name="theme-color" content="#000000"/><link rel="manifest" href="/manifest.json"/><title>GoldValley</title><script defer="defer" src="/static/js/main.b05a7b27.js"></script><link href="/static/css/main.2ee10108.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Coming Soon</title>
+<style>
+  body, html {
+    height: 100%;
+    margin: 0;
+    font-family: Arial, sans-serif;
+  }
+
+  .bg {
+    /* The image used */
+    background-image: url("static/media/bg_goldValley.03aed06ad30cbf6b3ea1.jpeg");
+
+    /* Full height */
+    height: 100%;
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    /* Add a black overlay to ensure text is readable */
+    background-color: rgba(0,0,0,0.5); /* Black with a bit of transparency */
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  h1 {
+    font-size: 50px;
+    margin-bottom: 20px;
+  }
+
+  p {
+    font-size: 24px;
+  }
+</style>
+</head>
+<body>
+
+<div class="bg">
+  <h1>Coming Soon</h1>
+  <p>Our website is under construction, stay tuned for something amazing!</p>
+</div>
+
+</body>
+</html>
